Start DB Operations

--- a/cmd/web/templates/home.page.gohtml
+++ b/cmd/web/templates/home.page.gohtml
@@ -1,8 +1,9 @@
 {{template "base" .}}
 {{define "title"}}
-    Buy one widget
+    Widgets
 {{end}}
 
 {{define "content"}}
-    <h1>Hola Mundo</h1>
+    <h2 class="mt-5">Widgets</h2>
+    <hr>
 {{end}}
