--- a/cmd/web/templates/terminal.page.gohtml
+++ b/cmd/web/templates/terminal.page.gohtml
@@ -9,7 +9,7 @@
 <hr>
 <div class="alert alert-danger text-center d-none" id="card-messages"></div>
 
-<form action="/payment-succeeded" method="post"
+<form action="/virtual-terminal-payment-succeeded" method="post"
     name="charge_form" id="charge_form"
     class="d-block needs-validation charge-form"
     autocomplete="off" novalidate="">
@@ -60,13 +60,13 @@
 
 {{define "js"}}
     <script>
-        document.getElementById("charge_amount", function(event) {
+        document.getElementById("charge_amount").addEventListener("change", function(event) {
             if (event.target !== "") {
-                document.getElementById("amount").value = event.target.value * 100;
+                document.getElementById("amount").value = parseInt((event.target.value * 100), 10);
             } else {
-                document.getElementById("amount").value =
+                document.getElementById("amount").value = 0;
             }
-        })
+        });
     </script>
     {{template "stripe-js" .}}
 {{end}}
